y.output
Non-terminaux inutiles dans la grammaire

    Var


Terminaux inutilisés dans la grammaire

    tCOMA
    tBLANK
    tERROR


Règles inutiles dans la grammaire

   46 Var: tVARNAME
   47    | tVARNAME tCOMA Var


État 52 conflits: 6 réduction/réduction
État 87 conflits: 8 décalage/réduction
État 88 conflits: 8 décalage/réduction
État 89 conflits: 8 décalage/réduction
État 90 conflits: 8 décalage/réduction
État 91 conflits: 8 décalage/réduction
État 92 conflits: 8 décalage/réduction
État 93 conflits: 6 décalage/réduction
État 94 conflits: 6 décalage/réduction


Grammaire

    0 $accept: Programme $end

    1 Programme: tMAIN tPO tPF Body
    2          | tMAIN tPO VarInt tPF Body

    3 $@1: %empty

    4 Body: tAO $@1 Lines tAF

    5 Lines: Declaration Lines
    6      | Operation Lines
    7      | Print Lines
    8      | If Lines
    9      | IfElse Lines
   10      | While Lines
   11      | %empty

   12 Declaration: Const tSC
   13            | VarInt tSC
   14            | Const tEGAL Expr tSC
   15            | VarInt tEGAL Expr tSC

   16 $@2: %empty

   17 Const: tCONST $@2 VarInt

   18 VarInt: tINT tVARNAME

   19 Operation: tVARNAME tEGAL Expr tSC

   20 Expr: Expr tADD Expr
   21     | Expr tSOU Expr
   22     | Expr tMUL Expr
   23     | Expr tDIV Expr
   24     | tPO Expr tPF
   25     | Condition
   26     | Terme

   27 Terme: tNB
   28      | tVARNAME

   29 Print: tPRINT tPO Terme tPF tSC

   30 $@3: %empty

   31 $@4: %empty

   32 While: tWHILE $@3 tPO Condition $@4 tPF Body

   33 $@5: %empty

   34 If: tIF tPO Condition $@5 tPF Body

   35 IfElse: If tELSE Body

   36 Condition: Condition tSUPEQ Condition
   37          | Condition tSUP Condition
   38          | Condition tINFEQ Condition
   39          | Condition tINF Condition
   40          | Condition tEQUAL Condition
   41          | Condition tDIFF Condition
   42          | Condition tOR Condition
   43          | Condition tAND Condition
   44          | tNOT tPO Condition tPF
   45          | Terme


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tMAIN (258) 1 2
    tPO (259) 1 2 24 29 32 34 44
    tPF (260) 1 2 24 29 32 34 44
    tAO (261) 4
    tAF (262) 4
    tCONST (263) 17
    tINT (264) 18
    tEGAL (265) 14 15 19
    tSOU (266) 21
    tADD (267) 20
    tMUL (268) 22
    tDIV (269) 23
    tNOT (270) 44
    tSUP (271) 37
    tINF (272) 39
    tEQUAL (273) 40
    tDIFF (274) 41
    tSUPEQ (275) 36
    tINFEQ (276) 38
    tOR (277) 42
    tAND (278) 43
    tCOMA (279)
    tSC (280) 12 13 14 15 19 29
    tPRINT (281) 29
    tBLANK (282)
    tERROR (283)
    tVARNAME <var> (284) 18 19 28
    tNB <nb> (285) 27
    tWHILE <nb> (286) 32
    tIF <nb> (287) 34
    tELSE <nb> (288) 35


Non-terminaux, suivis des règles où ils apparaissent

    $accept (34)
        à gauche: 0
    Programme (35)
        à gauche: 1 2
        à droite: 0
    Body (36)
        à gauche: 4
        à droite: 1 2 32 34 35
    $@1 (37)
        à gauche: 3
        à droite: 4
    Lines (38)
        à gauche: 5 6 7 8 9 10 11
        à droite: 4 5 6 7 8 9 10
    Declaration (39)
        à gauche: 12 13 14 15
        à droite: 5
    Const <var> (40)
        à gauche: 17
        à droite: 12 14
    $@2 (41)
        à gauche: 16
        à droite: 17
    VarInt <var> (42)
        à gauche: 18
        à droite: 2 13 15 17
    Operation <nb> (43)
        à gauche: 19
        à droite: 6
    Expr <nb> (44)
        à gauche: 20 21 22 23 24 25 26
        à droite: 14 15 19 20 21 22 23 24
    Terme <nb> (45)
        à gauche: 27 28
        à droite: 26 29 45
    Print (46)
        à gauche: 29
        à droite: 7
    While (47)
        à gauche: 32
        à droite: 10
    $@3 (48)
        à gauche: 30
        à droite: 32
    $@4 (49)
        à gauche: 31
        à droite: 32
    If <nb> (50)
        à gauche: 34
        à droite: 8 35
    $@5 (51)
        à gauche: 33
        à droite: 34
    IfElse (52)
        à gauche: 35
        à droite: 9
    Condition <nb> (53)
        à gauche: 36 37 38 39 40 41 42 43 44 45
        à droite: 25 32 34 36 37 38 39 40 41 42 43 44


État 0

    0 $accept: . Programme $end

    tMAIN  décalage et aller à l'état 1

    Programme  aller à l'état 2


État 1

    1 Programme: tMAIN . tPO tPF Body
    2          | tMAIN . tPO VarInt tPF Body

    tPO  décalage et aller à l'état 3


État 2

    0 $accept: Programme . $end

    $end  décalage et aller à l'état 4


État 3

    1 Programme: tMAIN tPO . tPF Body
    2          | tMAIN tPO . VarInt tPF Body

    tPF   décalage et aller à l'état 5
    tINT  décalage et aller à l'état 6

    VarInt  aller à l'état 7


État 4

    0 $accept: Programme $end .

    $défaut  accepter


État 5

    1 Programme: tMAIN tPO tPF . Body

    tAO  décalage et aller à l'état 8

    Body  aller à l'état 9


État 6

   18 VarInt: tINT . tVARNAME

    tVARNAME  décalage et aller à l'état 10


État 7

    2 Programme: tMAIN tPO VarInt . tPF Body

    tPF  décalage et aller à l'état 11


État 8

    4 Body: tAO . $@1 Lines tAF

    $défaut  réduction par utilisation de la règle 3 ($@1)

    $@1  aller à l'état 12


État 9

    1 Programme: tMAIN tPO tPF Body .

    $défaut  réduction par utilisation de la règle 1 (Programme)


État 10

   18 VarInt: tINT tVARNAME .

    $défaut  réduction par utilisation de la règle 18 (VarInt)


État 11

    2 Programme: tMAIN tPO VarInt tPF . Body

    tAO  décalage et aller à l'état 8

    Body  aller à l'état 13


État 12

    4 Body: tAO $@1 . Lines tAF

    tCONST    décalage et aller à l'état 14
    tINT      décalage et aller à l'état 6
    tPRINT    décalage et aller à l'état 15
    tVARNAME  décalage et aller à l'état 16
    tWHILE    décalage et aller à l'état 17
    tIF       décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 11 (Lines)

    Lines        aller à l'état 19
    Declaration  aller à l'état 20
    Const        aller à l'état 21
    VarInt       aller à l'état 22
    Operation    aller à l'état 23
    Print        aller à l'état 24
    While        aller à l'état 25
    If           aller à l'état 26
    IfElse       aller à l'état 27


État 13

    2 Programme: tMAIN tPO VarInt tPF Body .

    $défaut  réduction par utilisation de la règle 2 (Programme)


État 14

   17 Const: tCONST . $@2 VarInt

    $défaut  réduction par utilisation de la règle 16 ($@2)

    $@2  aller à l'état 28


État 15

   29 Print: tPRINT . tPO Terme tPF tSC

    tPO  décalage et aller à l'état 29


État 16

   19 Operation: tVARNAME . tEGAL Expr tSC

    tEGAL  décalage et aller à l'état 30


État 17

   32 While: tWHILE . $@3 tPO Condition $@4 tPF Body

    $défaut  réduction par utilisation de la règle 30 ($@3)

    $@3  aller à l'état 31


État 18

   34 If: tIF . tPO Condition $@5 tPF Body

    tPO  décalage et aller à l'état 32


État 19

    4 Body: tAO $@1 Lines . tAF

    tAF  décalage et aller à l'état 33


État 20

    5 Lines: Declaration . Lines

    tCONST    décalage et aller à l'état 14
    tINT      décalage et aller à l'état 6
    tPRINT    décalage et aller à l'état 15
    tVARNAME  décalage et aller à l'état 16
    tWHILE    décalage et aller à l'état 17
    tIF       décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 11 (Lines)

    Lines        aller à l'état 34
    Declaration  aller à l'état 20
    Const        aller à l'état 21
    VarInt       aller à l'état 22
    Operation    aller à l'état 23
    Print        aller à l'état 24
    While        aller à l'état 25
    If           aller à l'état 26
    IfElse       aller à l'état 27


État 21

   12 Declaration: Const . tSC
   14            | Const . tEGAL Expr tSC

    tEGAL  décalage et aller à l'état 35
    tSC    décalage et aller à l'état 36


État 22

   13 Declaration: VarInt . tSC
   15            | VarInt . tEGAL Expr tSC

    tEGAL  décalage et aller à l'état 37
    tSC    décalage et aller à l'état 38


État 23

    6 Lines: Operation . Lines

    tCONST    décalage et aller à l'état 14
    tINT      décalage et aller à l'état 6
    tPRINT    décalage et aller à l'état 15
    tVARNAME  décalage et aller à l'état 16
    tWHILE    décalage et aller à l'état 17
    tIF       décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 11 (Lines)

    Lines        aller à l'état 39
    Declaration  aller à l'état 20
    Const        aller à l'état 21
    VarInt       aller à l'état 22
    Operation    aller à l'état 23
    Print        aller à l'état 24
    While        aller à l'état 25
    If           aller à l'état 26
    IfElse       aller à l'état 27


État 24

    7 Lines: Print . Lines

    tCONST    décalage et aller à l'état 14
    tINT      décalage et aller à l'état 6
    tPRINT    décalage et aller à l'état 15
    tVARNAME  décalage et aller à l'état 16
    tWHILE    décalage et aller à l'état 17
    tIF       décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 11 (Lines)

    Lines        aller à l'état 40
    Declaration  aller à l'état 20
    Const        aller à l'état 21
    VarInt       aller à l'état 22
    Operation    aller à l'état 23
    Print        aller à l'état 24
    While        aller à l'état 25
    If           aller à l'état 26
    IfElse       aller à l'état 27


État 25

   10 Lines: While . Lines

    tCONST    décalage et aller à l'état 14
    tINT      décalage et aller à l'état 6
    tPRINT    décalage et aller à l'état 15
    tVARNAME  décalage et aller à l'état 16
    tWHILE    décalage et aller à l'état 17
    tIF       décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 11 (Lines)

    Lines        aller à l'état 41
    Declaration  aller à l'état 20
    Const        aller à l'état 21
    VarInt       aller à l'état 22
    Operation    aller à l'état 23
    Print        aller à l'état 24
    While        aller à l'état 25
    If           aller à l'état 26
    IfElse       aller à l'état 27


État 26

    8 Lines: If . Lines
   35 IfElse: If . tELSE Body

    tCONST    décalage et aller à l'état 14
    tINT      décalage et aller à l'état 6
    tPRINT    décalage et aller à l'état 15
    tVARNAME  décalage et aller à l'état 16
    tWHILE    décalage et aller à l'état 17
    tIF       décalage et aller à l'état 18
    tELSE     décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 11 (Lines)

    Lines        aller à l'état 43
    Declaration  aller à l'état 20
    Const        aller à l'état 21
    VarInt       aller à l'état 22
    Operation    aller à l'état 23
    Print        aller à l'état 24
    While        aller à l'état 25
    If           aller à l'état 26
    IfElse       aller à l'état 27


État 27

    9 Lines: IfElse . Lines

    tCONST    décalage et aller à l'état 14
    tINT      décalage et aller à l'état 6
    tPRINT    décalage et aller à l'état 15
    tVARNAME  décalage et aller à l'état 16
    tWHILE    décalage et aller à l'état 17
    tIF       décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 11 (Lines)

    Lines        aller à l'état 44
    Declaration  aller à l'état 20
    Const        aller à l'état 21
    VarInt       aller à l'état 22
    Operation    aller à l'état 23
    Print        aller à l'état 24
    While        aller à l'état 25
    If           aller à l'état 26
    IfElse       aller à l'état 27


État 28

   17 Const: tCONST $@2 . VarInt

    tINT  décalage et aller à l'état 6

    VarInt  aller à l'état 45


État 29

   29 Print: tPRINT tPO . Terme tPF tSC

    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme  aller à l'état 48


État 30

   19 Operation: tVARNAME tEGAL . Expr tSC

    tPO       décalage et aller à l'état 49
    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Expr       aller à l'état 51
    Terme      aller à l'état 52
    Condition  aller à l'état 53


État 31

   32 While: tWHILE $@3 . tPO Condition $@4 tPF Body

    tPO  décalage et aller à l'état 54


État 32

   34 If: tIF tPO . Condition $@5 tPF Body

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 56


État 33

    4 Body: tAO $@1 Lines tAF .

    $défaut  réduction par utilisation de la règle 4 (Body)


État 34

    5 Lines: Declaration Lines .

    $défaut  réduction par utilisation de la règle 5 (Lines)


État 35

   14 Declaration: Const tEGAL . Expr tSC

    tPO       décalage et aller à l'état 49
    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Expr       aller à l'état 57
    Terme      aller à l'état 52
    Condition  aller à l'état 53


État 36

   12 Declaration: Const tSC .

    $défaut  réduction par utilisation de la règle 12 (Declaration)


État 37

   15 Declaration: VarInt tEGAL . Expr tSC

    tPO       décalage et aller à l'état 49
    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Expr       aller à l'état 58
    Terme      aller à l'état 52
    Condition  aller à l'état 53


État 38

   13 Declaration: VarInt tSC .

    $défaut  réduction par utilisation de la règle 13 (Declaration)


État 39

    6 Lines: Operation Lines .

    $défaut  réduction par utilisation de la règle 6 (Lines)


État 40

    7 Lines: Print Lines .

    $défaut  réduction par utilisation de la règle 7 (Lines)


État 41

   10 Lines: While Lines .

    $défaut  réduction par utilisation de la règle 10 (Lines)


État 42

   35 IfElse: If tELSE . Body

    tAO  décalage et aller à l'état 8

    Body  aller à l'état 59


État 43

    8 Lines: If Lines .

    $défaut  réduction par utilisation de la règle 8 (Lines)


État 44

    9 Lines: IfElse Lines .

    $défaut  réduction par utilisation de la règle 9 (Lines)


État 45

   17 Const: tCONST $@2 VarInt .

    $défaut  réduction par utilisation de la règle 17 (Const)


État 46

   28 Terme: tVARNAME .

    $défaut  réduction par utilisation de la règle 28 (Terme)


État 47

   27 Terme: tNB .

    $défaut  réduction par utilisation de la règle 27 (Terme)


État 48

   29 Print: tPRINT tPO Terme . tPF tSC

    tPF  décalage et aller à l'état 60


État 49

   24 Expr: tPO . Expr tPF

    tPO       décalage et aller à l'état 49
    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Expr       aller à l'état 61
    Terme      aller à l'état 52
    Condition  aller à l'état 53


État 50

   44 Condition: tNOT . tPO Condition tPF

    tPO  décalage et aller à l'état 62


État 51

   19 Operation: tVARNAME tEGAL Expr . tSC
   20 Expr: Expr . tADD Expr
   21     | Expr . tSOU Expr
   22     | Expr . tMUL Expr
   23     | Expr . tDIV Expr

    tSOU  décalage et aller à l'état 63
    tADD  décalage et aller à l'état 64
    tMUL  décalage et aller à l'état 65
    tDIV  décalage et aller à l'état 66
    tSC   décalage et aller à l'état 67


État 52

   26 Expr: Terme .
   45 Condition: Terme .

    tPF       réduction par utilisation de la règle 26 (Expr)
    tPF       [réduction par utilisation de la règle 45 (Condition)]
    tSOU      réduction par utilisation de la règle 26 (Expr)
    tSOU      [réduction par utilisation de la règle 45 (Condition)]
    tADD      réduction par utilisation de la règle 26 (Expr)
    tADD      [réduction par utilisation de la règle 45 (Condition)]
    tMUL      réduction par utilisation de la règle 26 (Expr)
    tMUL      [réduction par utilisation de la règle 45 (Condition)]
    tDIV      réduction par utilisation de la règle 26 (Expr)
    tDIV      [réduction par utilisation de la règle 45 (Condition)]
    tSC       réduction par utilisation de la règle 26 (Expr)
    tSC       [réduction par utilisation de la règle 45 (Condition)]
    $défaut  réduction par utilisation de la règle 45 (Condition)


État 53

   25 Expr: Condition .
   36 Condition: Condition . tSUPEQ Condition
   37          | Condition . tSUP Condition
   38          | Condition . tINFEQ Condition
   39          | Condition . tINF Condition
   40          | Condition . tEQUAL Condition
   41          | Condition . tDIFF Condition
   42          | Condition . tOR Condition
   43          | Condition . tAND Condition

    tSUP    décalage et aller à l'état 68
    tINF    décalage et aller à l'état 69
    tEQUAL  décalage et aller à l'état 70
    tDIFF   décalage et aller à l'état 71
    tSUPEQ  décalage et aller à l'état 72
    tINFEQ  décalage et aller à l'état 73
    tOR     décalage et aller à l'état 74
    tAND    décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 25 (Expr)


État 54

   32 While: tWHILE $@3 tPO . Condition $@4 tPF Body

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 76


État 55

   45 Condition: Terme .

    $défaut  réduction par utilisation de la règle 45 (Condition)


État 56

   34 If: tIF tPO Condition . $@5 tPF Body
   36 Condition: Condition . tSUPEQ Condition
   37          | Condition . tSUP Condition
   38          | Condition . tINFEQ Condition
   39          | Condition . tINF Condition
   40          | Condition . tEQUAL Condition
   41          | Condition . tDIFF Condition
   42          | Condition . tOR Condition
   43          | Condition . tAND Condition

    tSUP    décalage et aller à l'état 68
    tINF    décalage et aller à l'état 69
    tEQUAL  décalage et aller à l'état 70
    tDIFF   décalage et aller à l'état 71
    tSUPEQ  décalage et aller à l'état 72
    tINFEQ  décalage et aller à l'état 73
    tOR     décalage et aller à l'état 74
    tAND    décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 33 ($@5)

    $@5  aller à l'état 77


État 57

   14 Declaration: Const tEGAL Expr . tSC
   20 Expr: Expr . tADD Expr
   21     | Expr . tSOU Expr
   22     | Expr . tMUL Expr
   23     | Expr . tDIV Expr

    tSOU  décalage et aller à l'état 63
    tADD  décalage et aller à l'état 64
    tMUL  décalage et aller à l'état 65
    tDIV  décalage et aller à l'état 66
    tSC   décalage et aller à l'état 78


État 58

   15 Declaration: VarInt tEGAL Expr . tSC
   20 Expr: Expr . tADD Expr
   21     | Expr . tSOU Expr
   22     | Expr . tMUL Expr
   23     | Expr . tDIV Expr

    tSOU  décalage et aller à l'état 63
    tADD  décalage et aller à l'état 64
    tMUL  décalage et aller à l'état 65
    tDIV  décalage et aller à l'état 66
    tSC   décalage et aller à l'état 79


État 59

   35 IfElse: If tELSE Body .

    $défaut  réduction par utilisation de la règle 35 (IfElse)


État 60

   29 Print: tPRINT tPO Terme tPF . tSC

    tSC  décalage et aller à l'état 80


État 61

   20 Expr: Expr . tADD Expr
   21     | Expr . tSOU Expr
   22     | Expr . tMUL Expr
   23     | Expr . tDIV Expr
   24     | tPO Expr . tPF

    tPF   décalage et aller à l'état 81
    tSOU  décalage et aller à l'état 63
    tADD  décalage et aller à l'état 64
    tMUL  décalage et aller à l'état 65
    tDIV  décalage et aller à l'état 66


État 62

   44 Condition: tNOT tPO . Condition tPF

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 82


État 63

   21 Expr: Expr tSOU . Expr

    tPO       décalage et aller à l'état 49
    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Expr       aller à l'état 83
    Terme      aller à l'état 52
    Condition  aller à l'état 53


État 64

   20 Expr: Expr tADD . Expr

    tPO       décalage et aller à l'état 49
    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Expr       aller à l'état 84
    Terme      aller à l'état 52
    Condition  aller à l'état 53


État 65

   22 Expr: Expr tMUL . Expr

    tPO       décalage et aller à l'état 49
    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Expr       aller à l'état 85
    Terme      aller à l'état 52
    Condition  aller à l'état 53


État 66

   23 Expr: Expr tDIV . Expr

    tPO       décalage et aller à l'état 49
    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Expr       aller à l'état 86
    Terme      aller à l'état 52
    Condition  aller à l'état 53


État 67

   19 Operation: tVARNAME tEGAL Expr tSC .

    $défaut  réduction par utilisation de la règle 19 (Operation)


État 68

   37 Condition: Condition tSUP . Condition

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 87


État 69

   39 Condition: Condition tINF . Condition

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 88


État 70

   40 Condition: Condition tEQUAL . Condition

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 89


État 71

   41 Condition: Condition tDIFF . Condition

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 90


État 72

   36 Condition: Condition tSUPEQ . Condition

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 91


État 73

   38 Condition: Condition tINFEQ . Condition

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 92


État 74

   42 Condition: Condition tOR . Condition

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 93


État 75

   43 Condition: Condition tAND . Condition

    tNOT      décalage et aller à l'état 50
    tVARNAME  décalage et aller à l'état 46
    tNB       décalage et aller à l'état 47

    Terme      aller à l'état 55
    Condition  aller à l'état 94


État 76

   32 While: tWHILE $@3 tPO Condition . $@4 tPF Body
   36 Condition: Condition . tSUPEQ Condition
   37          | Condition . tSUP Condition
   38          | Condition . tINFEQ Condition
   39          | Condition . tINF Condition
   40          | Condition . tEQUAL Condition
   41          | Condition . tDIFF Condition
   42          | Condition . tOR Condition
   43          | Condition . tAND Condition

    tSUP    décalage et aller à l'état 68
    tINF    décalage et aller à l'état 69
    tEQUAL  décalage et aller à l'état 70
    tDIFF   décalage et aller à l'état 71
    tSUPEQ  décalage et aller à l'état 72
    tINFEQ  décalage et aller à l'état 73
    tOR     décalage et aller à l'état 74
    tAND    décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 31 ($@4)

    $@4  aller à l'état 95


État 77

   34 If: tIF tPO Condition $@5 . tPF Body

    tPF  décalage et aller à l'état 96


État 78

   14 Declaration: Const tEGAL Expr tSC .

    $défaut  réduction par utilisation de la règle 14 (Declaration)


État 79

   15 Declaration: VarInt tEGAL Expr tSC .

    $défaut  réduction par utilisation de la règle 15 (Declaration)


État 80

   29 Print: tPRINT tPO Terme tPF tSC .

    $défaut  réduction par utilisation de la règle 29 (Print)


État 81

   24 Expr: tPO Expr tPF .

    $défaut  réduction par utilisation de la règle 24 (Expr)


État 82

   36 Condition: Condition . tSUPEQ Condition
   37          | Condition . tSUP Condition
   38          | Condition . tINFEQ Condition
   39          | Condition . tINF Condition
   40          | Condition . tEQUAL Condition
   41          | Condition . tDIFF Condition
   42          | Condition . tOR Condition
   43          | Condition . tAND Condition
   44          | tNOT tPO Condition . tPF

    tPF     décalage et aller à l'état 97
    tSUP    décalage et aller à l'état 68
    tINF    décalage et aller à l'état 69
    tEQUAL  décalage et aller à l'état 70
    tDIFF   décalage et aller à l'état 71
    tSUPEQ  décalage et aller à l'état 72
    tINFEQ  décalage et aller à l'état 73
    tOR     décalage et aller à l'état 74
    tAND    décalage et aller à l'état 75


État 83

   20 Expr: Expr . tADD Expr
   21     | Expr . tSOU Expr
   21     | Expr tSOU Expr .
   22     | Expr . tMUL Expr
   23     | Expr . tDIV Expr

    tMUL  décalage et aller à l'état 65
    tDIV  décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 21 (Expr)


État 84

   20 Expr: Expr . tADD Expr
   20     | Expr tADD Expr .
   21     | Expr . tSOU Expr
   22     | Expr . tMUL Expr
   23     | Expr . tDIV Expr

    tMUL  décalage et aller à l'état 65
    tDIV  décalage et aller à l'état 66

    $défaut  réduction par utilisation de la règle 20 (Expr)


État 85

   20 Expr: Expr . tADD Expr
   21     | Expr . tSOU Expr
   22     | Expr . tMUL Expr
   22     | Expr tMUL Expr .
   23     | Expr . tDIV Expr

    $défaut  réduction par utilisation de la règle 22 (Expr)


État 86

   20 Expr: Expr . tADD Expr
   21     | Expr . tSOU Expr
   22     | Expr . tMUL Expr
   23     | Expr . tDIV Expr
   23     | Expr tDIV Expr .

    $défaut  réduction par utilisation de la règle 23 (Expr)


État 87

   36 Condition: Condition . tSUPEQ Condition
   37          | Condition . tSUP Condition
   37          | Condition tSUP Condition .
   38          | Condition . tINFEQ Condition
   39          | Condition . tINF Condition
   40          | Condition . tEQUAL Condition
   41          | Condition . tDIFF Condition
   42          | Condition . tOR Condition
   43          | Condition . tAND Condition

    tSUP    décalage et aller à l'état 68
    tINF    décalage et aller à l'état 69
    tEQUAL  décalage et aller à l'état 70
    tDIFF   décalage et aller à l'état 71
    tSUPEQ  décalage et aller à l'état 72
    tINFEQ  décalage et aller à l'état 73
    tOR     décalage et aller à l'état 74
    tAND    décalage et aller à l'état 75

    tSUP      [réduction par utilisation de la règle 37 (Condition)]
    tINF      [réduction par utilisation de la règle 37 (Condition)]
    tEQUAL    [réduction par utilisation de la règle 37 (Condition)]
    tDIFF     [réduction par utilisation de la règle 37 (Condition)]
    tSUPEQ    [réduction par utilisation de la règle 37 (Condition)]
    tINFEQ    [réduction par utilisation de la règle 37 (Condition)]
    tOR       [réduction par utilisation de la règle 37 (Condition)]
    tAND      [réduction par utilisation de la règle 37 (Condition)]
    $défaut  réduction par utilisation de la règle 37 (Condition)


État 88

   36 Condition: Condition . tSUPEQ Condition
   37          | Condition . tSUP Condition
   38          | Condition . tINFEQ Condition
   39          | Condition . tINF Condition
   39          | Condition tINF Condition .
   40          | Condition . tEQUAL Condition
   41          | Condition . tDIFF Condition
   42          | Condition . tOR Condition
   43          | Condition . tAND Condition

    tSUP    décalage et aller à l'état 68
    tINF    décalage et aller à l'état 69
    tEQUAL  décalage et aller à l'état 70
    tDIFF   décalage et aller à l'état 71
    tSUPEQ  décalage et aller à l'état 72
    tINFEQ  décalage et aller à l'état 73
    tOR     décalage et aller à l'état 74
    tAND    décalage et aller à l'état 75

    tSUP      [réduction par utilisation de la règle 39 (Condition)]
    tINF      [réduction par utilisation de la règle 39 (Condition)]
    tEQUAL    [réduction par utilisation de la règle 39 (Condition)]
    tDIFF     [réduction par utilisation de la règle 39 (Condition)]
    tSUPEQ    [réduction par utilisation de la règle 39 (Condition)]
    tINFEQ    [réduction par utilisation de la règle 39 (Condition)]
    tOR       [réduction par utilisation de la règle 39 (Condition)]
    tAND      [réduction par utilisation de la règle 39 (Condition)]
    $défaut  réduction par utilisation de la règle 39 (Condition)


État 89

   36 Condition: Condition . tSUPEQ Condition
   37          | Condition . tSUP Condition
   38          | Condition . tINFEQ Condition
   39          | Condition . tINF Condition
   40          | Condition . tEQUAL Condition
   40          | Condition tEQUAL Condition .
   41          | Condition . tDIFF Condition
   42          | Condition . tOR Condition
   43          | Condition . tAND Condition

    tSUP    décalage et aller à l'état 68
    tINF    décalage et aller à l'état 69
    tEQUAL  décalage et aller à l'état 70
    tDIFF   décalage et aller à l'état 71
    tSUPEQ  décalage et aller à l'état 72
    tINFEQ  décalage et aller à l'état 73
    tOR     décalage et aller à l'état 74
    tAND    décalage et aller à l'état 75

    tSUP      [réduction par utilisation de la règle 40 (Condition)]
    tINF      [réduction par utilisation de la règle 40 (Condition)]
    tEQUAL    [réduction par utilisation de la règle 40 (Condition)]
    tDIFF     [réduction par utilisation de la règle 40 (Condition)]
    tSUPEQ    [réduction par utilisation de la règle 40 (Condition)]
    tINFEQ    [réduction par utilisation de la règle 40 (Condition)]
    tOR       [réduction par utilisation de la règle 40 (Condition)]
    tAND      [réduction par utilisation de la règle 40 (Condition)]
    $défaut  réduction par utilisation de la règle 40 (Condition)


État 90

   36 Condition: Condition . tSUPEQ Condition
   37          | Condition . tSUP Condition
   38          | Condition . tINFEQ Condition
   39          | Condition . tINF Condition
   40          | Condition . tEQUAL Condition
   41          | Condition . tDIFF Condition
   41          | Condition tDIFF Condition .
   42          | Condition . tOR Condition
   43          | Condition . tAND Condition

    tSUP    décalage et aller à l'état 68
    tINF    décalage et aller à l'état 69
    tEQUAL  décalage et aller à l'état 70
    tDIFF   décalage et aller à l'état 71
    tSUPEQ  décalage et aller à l'état 72
    tINFEQ  décalage et aller à l'état 73
    tOR     décalage et aller à l'état 74
    tAND    décalage et aller à l'état 75

    tSUP      [réduction par utilisation de la règle 41 (Condition)]
    tINF      [réduction par utilisation de la règle 41 (Condition)]
    tEQUAL    [réduction par utilisation de la règle 41 (Condition)]
    tDIFF     [réduction par utilisation de la règle 41 (Condition)]
    tSUPEQ    [réduction par utilisation de la règle 41 (Condition)]
    tINFEQ    [réduction par utilisation de la règle 41 (Condition)]
    tOR       [réduction par utilisation de la règle 41 (Condition)]
    tAND      [réduction par utilisation de la règle 41 (Condition)]
    $défaut  réduction par utilisation de la règle 41 (Condition)


État 91

   36 Condition: Condition . tSUPEQ Condition
   36          | Condition tSUPEQ Condition .
   37          | Condition . tSUP Condition
   38          | Condition . tINFEQ Condition
   39          | Condition . tINF Condition
   40          | Condition . tEQUAL Condition
   41          | Condition . tDIFF Condition
   42          | Condition . tOR Condition
   43          | Condition . tAND Condition

    tSUP    décalage et aller à l'état 68
    tINF    décalage et aller à l'état 69
    tEQUAL  décalage et aller à l'état 70
    tDIFF   décalage et aller à l'état 71
    tSUPEQ  décalage et aller à l'état 72
    tINFEQ  décalage et aller à l'état 73
    tOR     décalage et aller à l'état 74
    tAND    décalage et aller à l'état 75
